<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/loginLayout"
    tools:context="com.infoshare.pages.LoginActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        style="@style/BigFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/emailAddress"
        style="@style/FormFont"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        style="@style/FormFont" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:text="@string/rememberMe"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        style="@style/FormFont" />

    <Button
        android:id="@+id/registerButton"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:background="@drawable/blue_button"
        android:text="@string/register"
        android:onClick="register" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgotPassword"
        style="@style/LinkFont" 
        android:onClick="forgot"/>

    <Button
        android:id="@+id/loginButton"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rememberMe"
        android:layout_alignStart="@+id/rememberMe"
        android:layout_below="@+id/rememberMe"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button"
        android:text="@string/login" 
        android:onClick="login"/>

</RelativeLayout>